JythonCli.java - workaround for Java 24 and Java 25